Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.3, 5.12.4
-
OS: Ubuntu 18.04
Compiler: g++ 7.4.0
Qt version: 5.12.3 bad
Qt version: 5.12.2 good
-
5eceb1801ec881947f80f70f32ea46e00926194f (qt/qtdeclarative/5.12)
Description
In some cases, "this" context of the directly called function is incorrect.
Error in an example : Cannot assign QJSValue to QQuickItem*
How to repeat:
- Launch attached example test_bug.zip
- Wait for display text and green rectangle
- Click on any area of a window
- EXPECTED: get not empty this context
- ACTUAL: in log error: Cannot assign QJSValue to QQuickItem*
Regression commit in qtdeclarative module, link https://code.qt.io/cgit/qt/qtdeclarative.git/commit/?id=bcbce96fffd25a4f2810f03cec060ab13e34ac9e
Attachments
Issue Links
- duplicates
-
QTBUG-77015 QML 'this' property binding is broken
-
- Closed
-