Fix thisObject when calling scope and context properties through lookups

Just like resolving the lookup initially, we need to set the base also
when hitting the cached lookup code path. The base is then used as this
object.

Fixes: QTBUG-76656
Change-Id: I6f6be05bc9875ddccc6e112e91176a0fa24a8fa1
Reviewed-by: Michael Brasser <michael.brasser@live.com>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>